2007-05-30  Mark Wielaard  <mark@klomp.org>

	Fixes bug #32030 reported by Steve.Blackburn@anu.edu.au
	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(Java_gnu_java_nio_VMChannel_open): Only set O_TRUNC when
	CPNIO_APPEND is not, but O_WRONLY is set.

2007-05-25  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/java/awt/peer/x/XGraphics2D.java:
	(rawDrawLine): Added addition of translation.
	(rawFillRect): Dito.

2007-05-25  Robert Schuster  <robertschuster@fsfe.org>

	* gnu/java/awt/font/opentype/OpenTypeFont.java:
	(getGlyphIndex): Call getGlyphCharMap() instead of
	accessing cmap field directly.

2007-05-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* native/jni/java-nio/gnu_java_nio_VMChannel.c
	(Java_gnu_java_nio_VMChannel_available): Use fstat or select as an
	alternative to ioctl.
	* native/jni/native-lib/cpio.c(cpio_availableBytes): Corrected typo.

2007-05-24  Roman Kennke  <roman@kennke.org>

	* gnu/java/math/Fixed.java
	(trunc): New method.

2007-05-24  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/java2d/AbstractGraphics2D.java
	(fillShape): Pass rendering hints to scanline converter.
	* gnu/java/awt/java2d/ScanlineConverter.java
	(ONE): New constant for the number 1 as fixed point number.
	(Y_RESOLUTION): New constant for the Y resolution.
	(doScanline): Handle the Y resolution.
	(renderShape): Accept rendering hints.
	(setResolution): Adjust maximum resolution with Y resolution.
	* gnu/java/awt/java2d/ScanlineCoverage.java
	(Iterator.handledPixelCoverage): New field.
	(Iterator.next): Handle single pixel coverage.
	(Iterator.hasNext): Handle single pixel coverage.
	(Iterator.reset): Reset single pixel coverage.
	(Range.toString): New method.
	(Coverage.pixelCoverage): New field.
	(add): Include Y (pixel) coverage.
	(findOrInsert): Reset Y coverage in reused entries.

2007-05-24  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/java2d/ScanlineCoverage.java
	(Iterator): New class.
	(Range): New class.